--- a/authentication/static/styles/navbar.css
+++ b/authentication/static/styles/navbar.css
@@ -11,7 +11,7 @@
 
 .navbar {
   font-size: large;
-  font-family: "navBarFontFamily", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
