--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -1,117 +1,126 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
-<head>
-		<meta charset="UTF-8">
-		<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
-		<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
-		<link rel="stylesheet" href="{% static 'styles/menu_navbar.css' %}" type="text/css">
-		<title>Menú principal</title>
-</head>
-<body>
-	<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="{% url 'menu' %}" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="40">Menu</span>
-                </a>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href="{% url 'menu' %}" class="nav-link align-middle px-0">
-													<i class="fas fa-home"></i> <span class="ms-1 d-none d-sm-inline">Inicio</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-													<i class="fas fa-chalkboard-teacher"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-                        <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
-                    </li>
-                    <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-													<i class="fas fa-users"></i> <span class="ms-1 d-none d-sm-inline">Clientes</span></a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"><i class="fas fa-database"></i> <span class="d-none d-sm-inline">Datos personles</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"><i class="fas fa-tasks"> </i> <span class="d-none d-sm-inline">Tasks</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-													<i class="fas fa-shopping-cart"></i> <span class="ms-1 d-none d-sm-inline">Productos</span> </a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"><i class="fas fa-tasks"></i> <span class="d-none d-sm-inline">Tasks</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-0 align-middle">
-													<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Clientes</span> </a>
-                    </li>
-										<li>
-											<a href="#" class="nav-link px-0 align-middle">
-												<i class="fas fa-poll"></i><span class="ms-1 d-none d-sm-inline">Encuestas</span> </a>
-									</li>
-                </ul>
-                <hr>
-                <div class="dropdown pb-4">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-                        <span class="d-none d-sm-inline mx-1">{{ request.user }}</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-													{% if user.is_authenticated %}
-													<li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> {{ request.user }}</a></li>
-													<li><a class="dropdown-item" href="#"><i class="fas fa-lock"></i> Cambiar contraseña</a></li>
-													<li><a class="dropdown-item" href="#"><i class="fas fa-user-cog"></i> Configuración</a></li>
-													<li><hr class="dropdown-divider"></li>
-													<li><a class="dropdown-item" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt"></i> Cerrar sesión</a></li>
-													{% endif %}
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-					<nav class="navbar navbar-expand-lg">
-						<div class="container-fluid">
-							<a class="navbar-brand" href="{% url 'menu' %}"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></a>
-						</div>
-					</nav>
-					<div class="container">
-						<p class="lead text-dark text-center py-4">Bienvenido {{ request.user }}</p>
-					</div>
-        </div>
-    </div>
-</div>
-<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
-	
+<head>
+	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+	<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
+	<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}" type="text/javascript"></script>
+	<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
+	<link rel="stylesheet" href="{% static 'styles/menu_navbar.css' %}" type="text/css">
+	<title>{% block title %}Menú principal {% endblock %}</title>
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg bg-secondary bg-gradient">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{% url 'menu' %}"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle text-decoration-none" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							<i class="far fa-user"></i>
+						</a>
+						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+								{% if user.is_authenticated %}
+									<li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> {{ request.user }}</a></li>
+									<li><a class="dropdown-item" href="#"><i class="fas fa-lock"></i> Cambiar contraseña</a></li>
+									<li><hr class="dropdown-divider"></li>
+									<li><a class="dropdown-item" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt"></i> Cerrar
+											sesión</a></li>
+								{% endif %}
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container-fluid">
+		<div class="row flex-nowrap">
+			<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark bg-gradient">
+				<div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+					<a href="{% url 'menu' %}"
+						class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+						<span class="fs-5 d-none d-sm-inline py-2"><img src="{% static 'images/logo.png' %}" alt="logo.png"
+								width="40"> Menu</span>
+					</a>
+					<ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+						<li class="nav-item">
+							<a href="{% url 'menu' %}" class="nav-link align-middle px-0">
+								<i class="fas fa-home fa-lg"></i> <span class="ms-1 d-none d-sm-inline text-white">Inicio</span>
+							</a>
+						</li>
+						<li>
+							<a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+								<i class="fas fa-chalkboard-teacher fa-lg"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
+						</li>
+							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+								<span class="ms-1 d-none d-sm-inline"><i class="fas fa-tasks fa-lg"> </i> Tareas</span></a>
+							<ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+								<li class="w-100">
+									<a href="{% url 'tasks' %}" class="nav-link px-0"><i class="fas fa-database"></i> <span
+											class="d-none d-sm-inline">Mis tareas</span></a>
+								</li>
+								<li>
+									<a href="#" class="nav-link px-0"> <span
+											class="d-none d-sm-inline"><i class="fas fa-clipboard-list"></i> Asignar tareas</span></a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+								<i class="fas fa-shopping-cart"></i> <span class="ms-1 d-none d-sm-inline">Productos</span> </a>
+							<ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
+								<li class="w-100">
+									<a href="#" class="nav-link px-0"><i class="fas fa-tasks"></i> <span
+											class="d-none d-sm-inline">Tasks</span> 1</a>
+								</li>
+								<li>
+									<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
+								</li>
+								<li>
+									<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
+								</li>
+								<li>
+									<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="#" class="nav-link px-0 align-middle">
+								<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Clientes</span> </a>
+						</li>
+						<li>
+							<a href="#" class="nav-link px-0 align-middle">
+								<i class="fas fa-poll"></i><span class="ms-1 d-none d-sm-inline">Encuestas</span> </a>
+						</li>
+					</ul>
+					<hr>
+					<div class="dropdown pb-4">
+						<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+							id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+							<img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
+							<span class="d-none d-sm-inline mx-1">{{ request.user }}</span>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="container py-5">
+					{% block content %}
+
+					{% endblock %}
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+	<script src="{% static 'js/script.js' %}"></script>
+
 </body>
