--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
 									<i class="far fa-user"></i>
 								</a>
 								<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
-									<li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
+									<li><a class="dropdown-item" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Iniciar sesión</a></li>
+									<li><a class="dropdown-item" href="{% url 'register' %}"><i class="fas fa-user-plus"></i> Registrarse</a></li>
 									<li><hr class="dropdown-divider"></li>
 									<li><a class="dropdown-item" href="{% url 'admin:index' %}"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
 								</ul>
