se agrego el modelo para la app de tasks

--- a/menu/static/styles/menu_navbar.css
+++ b/menu/static/styles/menu_navbar.css
@@ -4,6 +4,23 @@
 }
 
 
+.nav-link {
+  color:#fcfcfc;
+}
+
+
+.nav-pills .nav-link {
+  padding: 20px;
+}
+
+
+.nav-link:hover {
+  color: #dbd8e3;
+  opacity: 0.3;
+  cursor: pointer;
+}
+
+
 .navbar {
     padding-top: 0px;
     position: inherit;
