--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -25,7 +25,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-decoration-none" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="far fa-user"></i>
+							<i class="far fa-user fa-2x"></i>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 								{% if user.is_authenticated %}
@@ -43,7 +43,7 @@
 	</nav>
 	<div class="container-fluid">
 		<div class="row flex-nowrap">
-			<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark bg-gradient">
+			<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-secondary bg-gradient">
 				<div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
 					<a href="{% url 'menu' %}"
 						class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -74,7 +74,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+							<a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-decoration-none>
 								<i class="fas fa-shopping-cart"></i> <span class="ms-1 d-none d-sm-inline">Productos</span> </a>
 							<ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
 								<li class="w-100">
@@ -102,13 +102,6 @@
 						</li>
 					</ul>
 					<hr>
-					<div class="dropdown pb-4">
-						<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-							id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-							<img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-							<span class="d-none d-sm-inline mx-1">{{ request.user }}</span>
-						</a>
-					</div>
 				</div>
 			</div>
 			<div class="col">
