se actualizo el diseño de la tabla de tareas

--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg bg-secondary bg-gradient">
+	<nav class="navbar navbar-expand-lg bg-secondary bg-gradient" style="width: 100%;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="{% url 'menu' %}"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,6 +114,4 @@
 		</div>
 	</div>
 	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-	<script src="{% static 'js/script.js' %}"></script>
-
 </body>
