--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,11 +1,20 @@
 {% extends "menu.html" %}
-
+{% load static %}
 {% block title %} Tareas {% endblock %}
 
 {% block content %}
-<h3 class="lead" style="color: blue;"> Realice la asignacion de tareas <i class="fas fa-tasks"></i></h3>
+<div id="greetings-message">
+	<h3 id="message" class="lead text-center">¡Bienvenido {{request.user}} al gestor de tareas!</h3>
+</div>
+<h3 class="lead py-3"> Realice la asignacion de tareas <i class="fas fa-tasks"></i></h3>
 
 <div class="table-responsive">
+	<div class="input-group py-3">
+		<div class="col-xs-4">
+			<input type="search" class="form-control form-control-sm" placeholder="Buscar tarea"><br>
+			<button class="btn btn-outline-primary btn-sm" type="submit"> Buscar tarea</button>
+		</div>
+	</div>
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr class="table table-primary bg-gradient">
@@ -24,7 +33,7 @@
 				<td> Hacer resporte </td>
 				<td> 2023-07-13 </td>
 				<td> <i class="fas fa-check-square"></i> </td>
-				<td> Normal </td>
+				<td> <button class="btn btn-primary"><i class="fas fa-check"></i></button> <button class="btn btn-danger"><i class="fas fa-edit"></i></button></td>
 			</tr>
 			<tr>
 				<td> 1 </td>
@@ -52,6 +61,22 @@
 			</tr>
 		</tbody>
 	</table>
+	<nav aria-label="...">
+		<ul class="pagination justify-content-center">
+		  <li class="page-item disabled">
+			<a class="page-link">Anterior</a>
+		  </li>
+		  <li class="page-item"><a class="page-link" href="#">1</a></li>
+		  <li class="page-item active" aria-current="page">
+			<a class="page-link" href="#">2</a>
+		  </li>
+		  <li class="page-item"><a class="page-link" href="#">3</a></li>
+		  <li class="page-item">
+			<a class="page-link" href="#">Siguiente</a>
+		  </li>
+		</ul>
+	  </nav>
 </div>
-
+<script src="{% static 'js/script.js' %}"></script>
 {% endblock %}
+
