se agrego el script para desaparecer el mensaje de bienvenida en 5 segundos

--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -114,4 +114,7 @@
 		</div>
 	</div>
 	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+	{% block child_js_below_files %} 
+
+	{% endblock %}
 </body>
