--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -25,7 +25,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle text-decoration-none" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="far fa-user fa-2x"></i>
+							<i class="far fa-user fa-1x"></i>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 								{% if user.is_authenticated %}
@@ -53,14 +53,10 @@
 					<ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
 						<li class="nav-item">
 							<a href="{% url 'menu' %}" class="nav-link align-middle px-0">
-								<i class="fas fa-home fa-lg"></i> <span class="ms-1 d-none d-sm-inline text-white">Inicio</span>
+								<span class="ms-1 d-none d-sm-inline text-white"><i class="fas fa-chalkboard-teacher fa-lg"></i> Dashboard</span>
 							</a>
 						</li>
-						<li>
-							<a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-								<i class="fas fa-chalkboard-teacher fa-lg"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-						</li>
-							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-decoration-none">
 								<span class="ms-1 d-none d-sm-inline"><i class="fas fa-tasks fa-lg"> </i> Tareas</span></a>
 							<ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
 								<li class="w-100">
@@ -105,9 +101,45 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="container py-5">
+				<div class="container container-sm py-5">
 					{% block content %}
-
+						<h3 class="display-5 text-center mb-3"> Bienvenido {{ request.user }}!</h3>
+						<div class="row py-3">
+								<div class="col-sm-6">
+									<div class="card mb-3">
+										<div class="card-body">
+											<h3 class="card-title"> Tareas pendientes</h3>
+											<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nesciunt quas provident eligendi omnis, suscipit atque optio temporibus, quibusdam quia maiores ipsa alias debitis fugit. Fuga non sed magnam provident.
+											</p>
+										</div>
+									</div>
+								</div> <br>
+								<div class="col-sm-6">
+									<div class="card mb-3">
+										<div class="card-body">
+											<h3 class="card-title"> Tareas pendientes</h3>
+												Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nesciunt quas provident eligendi omnis, suscipit atque optio temporibus, quibusdam quia maiores ipsa alias debitis fugit. Fuga non sed magnam provident.
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<div class="card mb-3">
+										<div class="card-body">
+											<h3 class="card-title"> Tareas pendientes</h3>
+												Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nesciunt quas provident eligendi omnis, suscipit atque optio temporibus, quibusdam quia maiores ipsa alias debitis fugit. Fuga non sed magnam provident.
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<div class="card mb-3">
+										<div class="card-body">
+											<h3 class="card-title"> Tareas pendientes</h3>
+												Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nesciunt quas provident eligendi omnis, suscipit atque optio temporibus, quibusdam quia maiores ipsa alias debitis fugit. Fuga non sed magnam provident.
+										</div>
+									</div>
+								</div>
+						</div>
+					
 					{% endblock %}
 				</div>
 			</div>
