app de contactos agregada

--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -71,14 +71,14 @@
 						</li>
 						<li>
 							<a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-decoration-none>
-								<i class="fas fa-shopping-cart"></i> <span class="ms-1 d-none d-sm-inline">Productos</span> </a>
+								<i class="fas fa-shopping-cart"></i> <span class="ms-1 d-none d-sm-inline"><i class="fas fa-boxes"></i> Productos</span> </a>
 							<ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
 								<li class="w-100">
 									<a href="#" class="nav-link px-0"><i class="fas fa-tasks"></i> <span
 											class="d-none d-sm-inline">Tasks</span> 1</a>
 								</li>
 								<li>
-									<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
+									<a class="text-decoration-none" href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
 								</li>
 								<li>
 									<a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
@@ -90,7 +90,7 @@
 						</li>
 						<li>
 							<a href="#" class="nav-link px-0 align-middle">
-								<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Clientes</span> </a>
+								<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Contactos</span> </a>
 						</li>
 						<li>
 							<a href="#" class="nav-link px-0 align-middle">
